fix preloader visibility

--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -41,8 +41,11 @@
 
 .preloader {
   display: flex;
+  flex-grow: 1;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  background-color: rgb(0 0 0 / 10%);
   width: 100%;
   height: 100%;
   z-index: 10;
